# fly-in

./: Makefile  README.md  fly_in.py  prueba.txt  pyproject.toml  trabajo.txt
src/: parsing.py  print_program.py  start.py  start_program.py
src/algorithm/: prioritized_planner copy.py  prioritized_planner copy2.py  prioritized_planner.py
src/object/: Connection.py  Dron.py  Hub.py  open_document.py
