[project]
name = "fly-in"
version = "1.0.0"
description = "Diseñar un sistema eficiente de enrutamiento de drones que naveguen multiples drones a través de zonas conectadas minimizando giros de simulacion y gestionando el movimiento con restrincciones."
authors = [
    {name = "Jaitowerr"}
]
license = "Jaitowerr"
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "termcolor (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
